tests/ui/parser/issues/issue-58094-missing-right-square-bracket.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-58094-missing-right-square-bracket.rs:5:4
   |
LL | #[Ѕ
   |  - ^
   |  |
   |  unclosed delimiter

error: aborting due to previous error

