tests/ui/parser/issues/issue-58094-missing-right-square-bracket.rs
// Fixed in #66054.
// ignore-tidy-trailing-newlines
// error-pattern: this file contains an unclosed delimiter
// error-pattern: aborting due to previous error
#[Ѕ